Fixed art sale input spacing, added react-currency-input for price inputs, and added placeholders instead of default value for height width inputs.

--- a/assets/styles/inventory_gamepad_add_item_form.less
+++ b/assets/styles/inventory_gamepad_add_item_form.less
@@ -53,6 +53,7 @@
   width: 60%;
   margin: 5% 20%;
   float: left;
+  font-size: 12px;
 }
 
 #add_item_picture_previews_container {
@@ -536,7 +537,7 @@
   width: 93%;
   height: 60px;
   float: left;
-  margin: 0 3% 1% 1%;
+  margin: 0 0 1% 1%;
   background-color: grey;
   border: 1px solid black;
 }
@@ -589,7 +590,7 @@
 }
 
 .add_item_art_inventory_price_input {
-  width: 36%;
+  width: 35%;
   height: 36px;
   float: left;
   margin: 6px 2% 6px 3%;
@@ -651,7 +652,7 @@
 
 
 
-#add_item_art_inventory_measurement_unit_dropdown {
+#add_item_inventory_measurement_unit_dropdown {
   min-width: 45px;
   min-height: 30px;
   position: absolute;
@@ -664,7 +665,7 @@
   border: 1px solid black;
 }
 
-#add_item_art_inventory_measurement_unit_dropdown_menu {
+#add_item_inventory_measurement_unit_dropdown_menu {
   min-width: 101px;
   min-height: 80px;
   position: absolute;
@@ -710,12 +711,23 @@
   cursor: pointer;
 }
 
-#add_item_art_inventory_input_addition_btn {
+.add_item_art_inventory_input_addition_btn {
   width: 27px;
   height: 27px;
   float: left;
   margin-top: 0.25%;
   margin-left: 2%;
+  border-radius: 25px;
+  text-align: center;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.add_item_art_inventory_input_deletion_btn {
+  width: 27px;
+  height: 27px;
+  float: left;
+  margin-top: 2.5%;
   border-radius: 25px;
   text-align: center;
   border: 1px solid black;
